# LogicalFrame

./: README.txt.txt  debug log.txt
LogicalFrame/: NetofSimple.vsdx  netOfUAV-manifold.vsdx  netOfUAV-nuc.vsdx  simple.vsdx
SummerCamp_ROS/Onboard-SDK-ROS-3.1/dji_sdk/launch/: sdk_manifold.launch
SummerCamp_ROS/uav_core_logic/: CMakeLists.txt
SummerCamp_ROS/uav_core_logic/src/: main_beta.cxx  recvInfo.cxx
